<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etiqueta_balsa_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Nombre" />

        <EditText
            android:id="@+id/etiqueta_balsa_ano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/año" />

        <EditText
            android:id="@+id/etiqueta_balsa_capacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/Capacidad" />

        <EditText
            android:id="@+id/etiqueta_balsa_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Estado" />

        <EditText
            android:id="@+id/etiqueta_balsa_materiales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Materiales" />

        <EditText
            android:id="@+id/etiqueta_balsa_funcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Función" />

        <CheckBox
            android:id="@+id/checkBox_balsa_filtraciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Filtraciones" />

        <EditText
            android:id="@+id/etiqueta_balsa_problemas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Problemas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGeorreferenciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Georreferenciar"
                android:text="@string/Georreferenciar" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>