<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etiqueta_impulsiones_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Nombre" />

        <EditText
            android:id="@+id/etiqueta_impulsiones_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/año" />

        <EditText
            android:id="@+id/etiqueta_impulsiones_tarifa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/TipoTarifaElectrica" />

        <EditText
            android:id="@+id/etiqueta_impulsiones_potencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/PotenciaContratada" />

        <EditText
            android:id="@+id/etiqueta_impulsiones_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Tipobomba" />

        <EditText
            android:id="@+id/etiqueta_impulsiones_caudal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/Caudalnominal" />

        <EditText
            android:id="@+id/etiqueta_impulsiones_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/AlturaManométrica" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGeorreferenciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Georreferenciar"
                android:text="@string/Georreferenciar" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>