<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="5sp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/Entidad_riego" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <EditText
            android:id="@+id/text_denominacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/denominacion"
            android:inputType="textPersonName"
            android:text="@string/denominacion" />

        <EditText
            android:id="@+id/text_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textPersonName"
            android:text="@string/direccion" />

        <EditText
            android:id="@+id/text_telfrc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="number"
            android:text="@string/telefono" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:paddingTop="50dp"
        android:text="@string/DatosPersonales" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <EditText
            android:id="@+id/text_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/NombreCompleto"
            android:inputType="textPersonName"
            android:text="@string/NombreCompleto" />

        <EditText
            android:id="@+id/text_posicionrc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Posicion"
            android:inputType="textPersonName"
            android:text="@string/Posicion" />

        <EditText
            android:id="@+id/text_telfpersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="number"
            android:text="@string/telefono" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuadarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Añadir" />


</LinearLayout>